# bad_json_parsers

./: .gitignore  .travis.yml  LICENSE  README.md  parser_d  parser_d.d  parser_go.go  parser_go_jsoniter.go  parser_haiku.cpp  parser_java_jackson.sh  parser_javascript.js  parser_jq.sh  parser_nim.nim  parser_perl.pl  parser_php.php  parser_postgresql.sh  parser_python.py  parser_ruby.rb  parser_ruby_oj.rb  test_java_jackson.sh  test_parser.py  test_parser.sh
parser-java-jackson/: pom.xml
parser-java-jackson/src/main/java/com/github/lovasoa/jsonlimits/: JacksonJavaParser.java
parser_c_jansson/: .gitignore  Makefile  parser_c_jansson.c
parser_cpp/: .gitignore  parser_cpp  parser_cpp.cpp
parser_cpp_rapidjson/: parser_cpp_rapidjson  parser_cpp_rapidjson.cpp
parser_dotnet/: Program.cs  parser_dotnet.csproj
parser_dotnet_system_text_json/: Program.cs
parser_elixir/: .gitignore  README.md  mix.exs
parser_elixir/lib/: parser_elixir.ex
parser_elixir/test/: parser_elixir_test.exs
parser_haskell/: Main.hs  parser-haskell.cabal
parser_java/: pom.xml
parser_java/src/main/java/: parser_java.java
parser_java_gson/: pom.xml
parser_js_bfj/: index.js  package-lock.json  package.json
parser_ocaml_yojson/: Makefile  parser_ocaml.ml
parser_rust/: .gitignore  Cargo.toml
parser_rust/src/: main.rs
parser_swift/: .gitignore
parser_swift/parser_swift/: main.swift
parser_swift/parser_swift.xcodeproj/: project.pbxproj
parser_swift/parser_swift.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
utils/: binary_search.sh  deep_json_array.sh
(+1 files in other folders)
